Fix navbar sizing/collapse

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,9 @@ body {
   height: 100%;
 }
 
-.navbar {
-  min-height: 64px;
+.navbar-container {
+  height: 64px;
+  z-index: 1030;
 }
 .tab-content {
   flex: 1 1 auto;
